Some Padding Issues and Overflow issues

--- a/src/components/elements/DropzoneComponent/DropzoneComponent.css
+++ b/src/components/elements/DropzoneComponent/DropzoneComponent.css
@@ -1,5 +1,23 @@
 .dropzone-style {
+  margin: 0 auto;
+  margin-top: 30px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5), inset 0 -1px 0 #002b40;
   border-radius: 4px;
   background-image: linear-gradient(180deg, #2e2e2e 0%, #1e1e1e 100%);
+}
+
+.dropzone-style.more-files{
+  width: 160px;
+  height: 160px;
+  padding: 10px;
+}
+
+.dropzone-style.more-files h2{
+  margin: 0 auto !important;
+}
+
+.dropzone-style.more-files img{
+  width: 80px;
+  height: 80px;
+  padding-top: 0px !important;
 }
