--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -132,6 +132,7 @@ button{
 .create_drop_button {
   width: 240px;
   margin: 32px 10px;
+  
 }
 
 .blank-button {
@@ -140,7 +141,7 @@ button{
   color: #eaeaea;
   font-size: 16px;
   font-weight: 600;
-  margin-left: 8px;
+  margin-left: 6px;
   cursor: pointer;
   font-family: var(--font-quicksand);
   letter-spacing: normal;
@@ -214,6 +215,9 @@ button{
 @media(max-width: 576px){
   .blank-gradient-button{
     font-size: 15px;
+  }
+  .create_drop_button{
+    width: 180px;
   }
 }
 
